# quadrotor_control

./: .gitignore  README.md  sim_stick.cal
control_toolbox/: CMakeLists.txt
fsm/: manifest.xml
fsm/cfg/: fsm_monitor.cfg  fsm_monitor.cfgc
fsm/docs/: fsm_monitorConfig-usage.dox  fsm_monitorConfig.dox  fsm_monitorConfig.wikidoc
fsm/launch/: FSM.launch
fsm/scripts/: ControllerManagementClass.py  Utility.py  (+12 more)
gazebo_quadrotor/: CMakeLists.txt  mainpage.dox  manifest.xml
gazebo_quadrotor/cfg/: QuadrotorPIDController.cfg  QuadrotorPIDController.cfgc
gazebo_quadrotor/cfg/cpp/gazebo_quadrotor/: QuadrotorPIDControllerConfig.h
gazebo_quadrotor/docs/: QuadrotorPIDControllerConfig-usage.dox  QuadrotorPIDControllerConfig.dox  QuadrotorPIDControllerConfig.wikidoc
gazebo_quadrotor/include/gazebo_quadrotor/: GazeboDraganflyX8.h  QuadrotorCommand.h  QuadrotorInput.h  QuadrotorPIDController.h  QuadrotorState.h
gazebo_quadrotor/src/: GazeboDraganflyX8.cpp  QuadrotorPIDController.cpp
gazebo_quadrotor/src/gazebo_quadrotor/cfg/: QuadrotorPIDControllerConfig.py
gazebo_quadrotor_worlds/: README.txt  mainpage.dox  manifest.xml
joy/: joy_node  joy_node.cpp
quadrotor_input/: CMakeLists.txt  mainpage.dox  manifest.xml
quadrotor_input/calibration/: direct_stick.cal  print_current_calibration.sh  run_calibration.sh  sim_stick.cal
quadrotor_input/cfg/: AltitudeController.cfg  AltitudeController.cfgc  JoystickConverter.cfg  JoystickConverter.cfgc  PositionController.cfg  PositionController.cfgc  PositionController.cfg~
quadrotor_input/cfg/cpp/quadrotor_input/: AltitudeControllerConfig.h  JoystickConverterConfig.h  PositionControllerConfig.h
quadrotor_input/docs/: AltitudeControllerConfig-usage.dox  AltitudeControllerConfig.dox  AltitudeControllerConfig.wikidoc  JoystickConverterConfig-usage.dox  JoystickConverterConfig.dox  JoystickConverterConfig.wikidoc  PositionControllerConfig-usage.dox  PositionControllerConfig.dox  PositionControllerConfig.wikidoc
quadrotor_input/include/quadrotor_input/: AltitudeController.h  ControllerBase.h  DraganflyConverter.h  JoystickConverter.h  MultiBox.h  PositionController.h  PositionController_backup0114.h  RadioControlMixer.h  SimpleStateMachine.h
quadrotor_input/launch/: altitude_controller_x8.launch  autopilot_scenario_position_x8.launch  autopilot_scenario_position_x8.launch~  core_x8.launch  core_x8_direct.launch  draganfly_converter.launch  joystick_altitude_x8.launch  joystick_converter.launch  joystick_converter_direct.launch  joystick_position_x8.launch  multi_box.launch  position_controller_x8.launch  position_controller_x8_backup0114.launch  radio_control_mixer.launch  radio_control_mixer.launch~  simple_state_machine_x8.launch
quadrotor_input/src/: AltitudeController.cpp  ControllerBase.cpp  DraganflyConverter.cpp  JoystickConverter.cpp  MultiBox.cpp  PositionController.cpp  PositionController_backup0114.cpp  RadioControlMixer.cpp  SimpleStateMachine.cpp  altitude_controller.cpp  draganfly_converter.cpp  joystick_converter.cpp  keyboard_to_joystick.cpp  multi_box.cpp  position_controller.cpp  radio_control_mixer.cpp  simple_state_machine.cpp  virtual_px4.cpp
quadrotor_input/src/quadrotor_input/cfg/: AltitudeControllerConfig.py  JoystickConverterConfig.py  PositionControllerConfig.py
quadrotor_input/src/quadrotor_input/srv/: _CommandController.py  _NotifyController.py  _SelectStateSource.py  __init__.py
quadrotor_input/srv/: CommandController.srv  NotifyController.srv  SelectStateSource.srv
quadrotor_input/srv_gen/cpp/include/quadrotor_input/: CommandController.h  NotifyController.h  SelectStateSource.h
quadrotor_input/srv_gen/lisp/: CommandController.lisp  NotifyController.lisp  SelectStateSource.lisp  _package.lisp  _package_CommandController.lisp  _package_NotifyController.lisp  _package_SelectStateSource.lisp  quadrotor_input-srv.asd
quadrotor_msgs/: mainpage.dox  manifest.xml
simple_udp/: CMakeLists.txt  mainpage.dox  manifest.xml
state_estimation/: CMakeLists.txt  mainpage.dox  manifest.xml  manifest.xml~
state_estimation/calibration/: lidar_pose.yaml  px4flow_pose.yaml  sonar_pose.yaml  sonar_pose_servoholder.yaml  sonar_pose_topbracket.yaml  vicon_pose.yaml  vicon_pose_guess.yaml  vicon_world.yaml  vision_pose.yaml  vision_pose.yaml.backup  vision_pose_factory_flight.yaml  vision_pose_flatdown.yaml  vision_pose_forward.yaml  vision_pose_guess.yaml  vision_pose_sideways.yaml
state_estimation/cfg/: PoseGen.cfg  PoseGen.cfgc
state_estimation/cfg/cpp/state_estimation/: PoseGenConfig.h
state_estimation/docs/: PoseGenConfig-usage.dox  PoseGenConfig.dox  PoseGenConfig.wikidoc
state_estimation/include/state_estimation/: AircraftMeasurements.h  AircraftModel.h  ExtendedKalmanFilter.h  FilterBase.h  Geodesy.h  Sample.h  SimpleVelocityFilter.h  Utility.h  YAMLParser.h  kalmanfilter.h
state_estimation/launch/: ekf_calib_imu_vicon.launch  ekf_calib_imu_vision.launch  ekf_fixed_rel_imu_vicon.launch  ekf_imu_px4flow.launch  ekf_imu_vicon.launch  ekf_imu_vision.launch  noisy_pose_guess_gen.launch  pose_gen.launch  pose_gen_2_chain.launch  pose_gen_2_obj.launch  simple_velocity_filter_vicon.launch  simple_velocity_filter_vision.launch
state_estimation/msg/: AircraftStateMsg.msg
state_estimation/msg_gen/cpp/include/state_estimation/: AircraftStateCalibMsg.h  AircraftStateMsg.h
state_estimation/msg_gen/lisp/: AircraftStateCalibMsg.lisp  AircraftStateMsg.lisp  _package.lisp  _package_AircraftStateCalibMsg.lisp  _package_AircraftStateMsg.lisp  state_estimation-msg.asd
state_estimation/scripts/: mag_to_yaw.py  measure_delay.py  quat_to_euler.py
state_estimation/src/: AircraftModel.cpp  ExtendedKalmanFilter.cpp  FilterBase.cpp  Sample.cpp  SimpleVelocityFilter.cpp  calc_imu_noise.cpp  calc_pose_noise.cpp  ekf_node.cpp  grab_calib_pose.cpp  noisy_pose_guess_generator.cpp  pose_generator.cpp  simple_velocity_filter.cpp  write_calib_pose.cpp
state_estimation/src/state_estimation/cfg/: PoseGenConfig.py
state_estimation/src/state_estimation/msg/: _AircraftStateCalibMsg.py  _AircraftStateMsg.py  __init__.py
(+118 files in other folders)
